--- a/src/app/components/all-profil/all-profil.component.html
+++ b/src/app/components/all-profil/all-profil.component.html
@@ -1,21 +1,23 @@
 <section id="all-profil">
-    <h1>
-        <span class="">Liste des Bakélistes disponibles dans tous </span><span class=""> les domaines</span>
+  <hr>
+    <h1 class="text-center">
+        <span class="">Tous les</span><span class=""> bakelistes</span>
     </h1>
+    <hr>
   <div class="container ui segment">
     <div class="row">
       <div class="col-2 ">
         <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
       <div class="col-8">
-        <p class="font-weight-bold">DOE John</p>
+        <p class="font-weight-bold">Mariama Faye</p>
         <p class="font-weight-normal">Développeur Python/ Django</p>
         <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
       </div>
       <div class="col-2 align-self-center ">
-        
-        <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-       
+          <a routerLink="/profil-bakeliste" class="redirect-link">
+            <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+          </a>
       </div>
     </div>
   </div>
@@ -25,14 +27,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Binetou Rassoul Samb</p>
           <p class="font-weight-normal">Marketeur</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -42,14 +44,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
-          <p class="font-weight-normal">Busness Man</p>
+          <p class="font-weight-bold">Khadija Diallo</p>
+          <p class="font-weight-normal">Business</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -59,14 +61,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Paul Nzamba-Nzamba</p>
           <p class="font-weight-normal">Développeur PHP</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -76,14 +78,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Bara Diop</p>
           <p class="font-weight-normal">Marketeur</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -93,14 +95,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Ibrahima Kindy Bah</p>
           <p class="font-weight-normal">Marketeur</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -110,14 +112,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Aïta Mbaye</p>
           <p class="font-weight-normal">Développeur Angular</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -127,14 +129,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Prince Diouf</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -144,14 +146,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Jesus Christ Diatta</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -161,14 +163,14 @@
             <img class="ui medium image " src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Assane Diatta</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-        
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -176,3 +178,4 @@
   
 </section>
 <hr>
+<app-footer></app-footer>
