--- a/src/app/components/bakelist-by-domain/bakelist-by-domain.component.html
+++ b/src/app/components/bakelist-by-domain/bakelist-by-domain.component.html
@@ -1,21 +1,24 @@
 <section>
-    <h1>
-        <span class="">Liste des Bakélistes du</span><span class=""> domaine Programmation</span>
+   <hr>
+    <h1 class="text-center">
+        <span class="">Bakelistes </span><span class="">Développeurs</span>
     </h1>
+    <hr>
   <div class="container ui segment">
     <div class="row">
       <div class="col-2 ">
         <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
       <div class="col-8">
-        <p class="font-weight-bold">DOE John</p>
+        <p class="font-weight-bold">Sadio Sangharé</p>
         <p class="font-weight-normal">Développeur Python/ Django</p>
         <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
       </div>
-      <div class="col-2 align-self-center ">
-        
-        <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-       
+      
+      <div class="col-2 align-self-center">
+          <a routerLink="/profil-bakeliste" class="redirect-link">
+            <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+          </a>
       </div>
     </div>
   </div>
@@ -25,14 +28,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Prince Diouf</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -42,14 +45,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Moustapha Touré</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -59,14 +62,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Djibril Sarr</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -76,14 +79,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Lorenzo Mendy</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -93,14 +96,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Aïta Mbaye</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -110,14 +113,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Assane Diatta</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -127,14 +130,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Maïmouna Diallo</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -144,14 +147,14 @@
           <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Fallilou Diaw</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-         
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -161,14 +164,14 @@
             <img class="ui medium image " src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
         </div>
         <div class="col-8">
-          <p class="font-weight-bold">DOE John</p>
+          <p class="font-weight-bold">Madjiguéne Mansour Ndiaye</p>
           <p class="font-weight-normal">Développeur Python/ Django</p>
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-          
-          <div class=" d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-        
+            <a routerLink="/profil-bakeliste" class="redirect-link">
+              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+            </a>
         </div>
       </div>
   </div>
@@ -176,3 +179,4 @@
   
 </section>
 <hr>
+<app-footer></app-footer>
