--- a/src/app/components/page-couverture-accueil/page-couverture-accueil.component.html
+++ b/src/app/components/page-couverture-accueil/page-couverture-accueil.component.html
@@ -1,8 +1,12 @@
 <section id="home-page-couverture">
 	<div class="container">
 		<h1 class="bienvenue">
-			Bakeli Talent
+			<span>Talents </span> <span>Bakeli</span>
 		</h1>
+		<div class="col-md-12 home-textuel-container">
+			<span class="text-premier">Bakeli et ses talents réunis autour d'un état d'esprit, le<span class="travail"> travail.</span></span><br>
+			<span class="text-deuxieme"><span class="recrutez">Recrutez nos talents,</span> formés dans la pratique à créer de la valeur ajoutée.</span>	
+		</div>
 		<div class="col-md-6 offset-md-3 search-container">
     		<form>
     			<div class="ui fluid icon input">
