--- a/src/app/components/carroussel/carroussel.component.css
+++ b/src/app/components/carroussel/carroussel.component.css
@@ -21,13 +21,13 @@ button{
   align-items: center;
 }
 button:hover{
-  background: #F44336;
+  background: #009688;
 
 }
 .btn-primary:not(:disabled):not(.disabled):active, .show>.btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #F44336;
-  border-color: #F44336;
+  background-color: #009688;
+  border-color: #009688;
 }
 .section{
   padding:60px 0px;
@@ -81,7 +81,7 @@ h1 span:last-child {
   border-bottom: 5px solid #ff9800;
 }
 .our-bakelist:hover {
-  border-bottom: 5px solid #F44336 ;
+  border-bottom: 5px solid #009688 ;
 }
 
 .our-bakelist .pic {
@@ -108,7 +108,7 @@ h1 span:last-child {
 }
 .our-bakelist:hover .pic:before {
   height: 100%;
-  background: #F44336;
+  background: #009688;
 }
 .our-bakelist .pic:after {
   content: "";
@@ -123,7 +123,7 @@ h1 span:last-child {
   transition: all 0.3s linear 0s;
 }
 .our-bakelist:hover .pic:after {
-  background: #F44336;
+  background: #009688;
 }
 .our-bakelist .pic img {
   width: 100%;
@@ -161,7 +161,7 @@ h1 span:last-child {
   width: 100%;
   padding-top: 10px;
   margin: 0;
-  background: #F44336;
+  background: #009688;
   position: absolute;
   bottom: -100px;
   left: 0;
@@ -196,4 +196,8 @@ h1 span:last-child {
     margin-left: 90px;
   }
 
+}
+
+.all-profile-btn-container a button{
+  width: 100%;
 }
