--- a/src/app/components/connexion/connexion.component.css
+++ b/src/app/components/connexion/connexion.component.css
@@ -1,4 +1,4 @@
-.form-content{
+.form-content {
     align-content: center;
     padding: 3px;
     border: 1px solid #ff9800;
@@ -7,39 +7,64 @@
     margin-top: 50px;
 }
 
-.form-in{
+.form-in {
     padding: 3px;
-    color:#ff9800;
-
+    color: #ff9800;
 }
 
-label{
-    color:#ff9800;
+label {
+    color: #ff9800;
 }
 
-.header{
-text-align: center;
-text-transform: uppercase;
-color: #ff9800;
-font-size: 40px;
+.header {
+    text-align: center;
+    text-transform: uppercase;
+    color: #ff9800;
+    font-size: 40px;
 }
 
-.card-header
-{
-   text-align: center;
+.card-header {
+    text-align: center;
     background-color: #ff9800 !important;
-
 }
 
-.inputstyle
-{
+.inputstyle {
     border: 1px solid #ff9800 !important;
 }
 
-.button
-{
+.button {
     background-color: #ff9800;
     color: white;
     width: 120px;
     align-self: center;
+}
+
+.section {
+    padding: 60px 0px;
+    margin-bottom: 100px;
+}
+
+.container {
+    margin-bottom: 80px;
+}
+
+h1 div {
+    position: relative;
+    float: left;
+    text-align: center;
+}
+
+h1 span:last-child {
+    color: #ff9800;
+    margin-right: 1rem;
+    text-align: center;
+}
+
+h1 span:last-child {
+    margin-right: 1rem;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.28571429em;
+    font-weight: 700;
+    font-size: 38px;
 }
