--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,86 +1,103 @@
-<section class="row" id="formulaireContact">
-    <div class="container-fluid">
-        <div class="card form-content col-md-12 shadow-lg p-3 mb-5 bg-white rounded">
-            <div class="card-header">
-        <h1>
-            <span class="fa fa-comments"></span>&nbsp;&nbsp;Contactez nous!</h1>
-            </div>
-            <div class="row">
-            <div class="col-md-5 ui inverted form partie">
-                <div class="two fields">
-                    <div class="field">
-                      <input  class="inputstyle" placeholder="Prenom"  name="first_name" type="text">
-                    </div>
-                    <div class="field">
-                      <input class="inputstyle" placeholder="Last Name" type="text">
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="two fields">
-                      <div class="field">
-                        <input class="inputstyle" placeholder="Email" type="text">
-                      </div>
-                      <div class="field">
-                        <input class="inputstyle"  placeholder="Phone" type="text">
-                      </div>
-                    </div>
-                    <hr>
-                <div class="field">
-                    <label>Text</label>
-                    <textarea placeholder=" Votre text ici"></textarea>
-                  </div>
-                  <div class="ui submit button">Envoyer</div>
-            </div>
-            
-            <div class="col-md-6 ui inverted form">
-                <p> 
-                    <i class="fa fa-map-marker fa-2x" ></i>&nbsp;&nbsp;<br>
-                    Grand Yoff 2</p>
-              <hr>
-               
-                  <i class="fa fa-globe fa-2x" aria-hidden="true"></i><br>
-                  <a >www.bakeli.tech</a>
-                  <hr>
-                  
-                      <i class="fa fa-at fa-2x" aria-hidden="true"></i>&nbsp;&nbsp;<br>
-                      <a> contact@bakeli.tech</a>
-                      <hr>
-                      <img src="https://img.icons8.com/doodle/48/000000/facebook-circled.png" >
-                    <img src="https://img.icons8.com/color/48/000000/instagram-new.png">
-                    
-                    <!-- <i class="fa fa-facebook-official fa-5x" aria-hidden="true"></i> -->
-                    <!-- <i class="fa fa-instagram fa-5x" aria-hidden="true"></i> -->
-            </div>
-            
-          </div>
-        <!-- <div class="ui inverted form form-in">
-            <hr>
-          <div class="two fields">
-            <div class="field">
-              <input  class="inputstyle" placeholder="Prenom"  name="first_name" type="text">
-            </div>
-            <div class="field">
-              <input class="inputstyle" placeholder="Last Name" type="text">
-            </div>
-          </div>
-          <hr>
-          <div class="two fields">
-              <div class="field">
-                <input class="inputstyle" placeholder="Email" type="text">
-              </div>
-              <div class="field">
-                <input class="inputstyle"  placeholder="Phone" type="text">
-              </div>
-            </div>
-            <hr>
-            <div class="field">
-                <label>Text</label>
-                <textarea placeholder=" Votre text ici"></textarea>
-              </div>
-          <div class="ui submit button">Envoyer</div>
-        </div>
-        </div> -->
-        </div>
+<section id="formulaireContact">
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center">
+        <span class="">ECRIVEZ-</span><span class="">NOUS</span>
+      </h1>
     </div>
+    <div class="row contact-container">
+      <div class="col-md-6 form">
+        <div class="container">
+          <h2 class="text-center">Formulaire de contact</h2>
+          <div class="row justify-content-center">
+            <div class="col-12">
+              <form action="mail.php" method="post">
+                <div class="card border-primary rounded-0">
+                  <div class="card-header p-0">
+                    <div class="bg-info text-white text-center py-2">
+                      <h3><i class="fa fa-envelope"></i> Nous écrire</h3>
+                      <p class="m-0">Nous sommes à votre disposition</p>
+                    </div>
+                  </div>
+                  <div class="card-body p-3">
+
+                    <!--Body-->
+                    <div class="form-group">
+                      <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text"><i class="fa fa-user text-info"></i></div>
+                        </div>
+                        <input type="text" class="form-control" id="nombre" name="nombre"
+                          placeholder="Prénom et Nom" required>
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text"><i class="fa fa-envelope text-info"></i></div>
+                        </div>
+                        <input type="email" class="form-control" id="nombre" name="email"
+                          placeholder="exemple@exemple.sn" required>
+                      </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="input-group mb-2">
+                          <div class="input-group-prepend">
+                            <div class="input-group-text"><i class="fa fa-phone text-info"></i></div>
+                          </div>
+                          <input type="text" class="form-control" id="phone" name="phone"
+                            placeholder="Votre numéro de téléphone" required>
+                        </div>
+                      </div>
+                    <div class="form-group">
+                      <div class="input-group mb-2">
+                        <div class="input-group-prepend">
+                          <div class="input-group-text"><i class="fa fa-comment text-info"></i></div>
+                        </div>
+                        <textarea class="form-control" placeholder="Votre message" required></textarea>
+                      </div>
+                    </div>
+
+                    <div class="text-center">
+                      <input type="submit" value="Envoyer" class="btn btn-info btn-block rounded-0 py-2">
+                    </div>
+                  </div>
+
+                </div>
+              </form>
+              <!--Form with header-->
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6 contact">
+          <div class="container">
+              <h2 class="text-center">Vous voulez nous rencontrer ?</h2>
+              <div class="row justify-content-center">
+                <div class="col-12">
+                  <div class="address-container">
+                      <i class="fas fa-map-marked-alt"></i> <br>
+                      <span>HML Grand-Yoff, Villa N°241 - Dakar (Sénégal)</span>
+                  </div> <hr>
+                  <div class="phone-container">
+                      <i class="fas fa-mobile-alt"></i> <br>
+                      <span>(+221) 78 015 81 71</span>
+                  </div> <hr>
+                  <div class="email-container">
+                      <i class="fas fa-at"></i> <br>
+                      <span>contact@bakeli.tech</span>
+                  </div> <hr>
+                  <div class="website-container">
+                      <i class="fas fa-globe"></i> <br>
+                      <span>www.talent.bakeli.tech</span>
+                  </div> <hr>
+                </div>
+              </div>
+            </div>
+      </div>
+    </div>
+  </div>
 </section>
-    
