--- a/src/app/components/domaines/domaines.component.html
+++ b/src/app/components/domaines/domaines.component.html
@@ -8,7 +8,7 @@
      	<div class="row">
 
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-				<a href="">	<div class="box-part text-center">
+				<a routerLink="/bakeliste-domaine">	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
           viewBox="0 0 192 192"
@@ -24,7 +24,7 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-					<a href=""> <div class="box-part text-center">
+					<a routerLink="/bakeliste-domaine"> <div class="box-part text-center">
             <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
             width="50" height="50"
             viewBox="0 0 192 192"
@@ -40,7 +40,7 @@
 				</div>
 
        <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-				<a href=""> 	<div class="box-part text-center">
+				<a routerLink="/bakeliste-domaine"> 	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
           viewBox="0 0 192 192"
@@ -56,7 +56,7 @@
         </div>
 
         <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12">
-				<a href="">	<div class="box-part text-center">
+				<a routerLink="/bakeliste-domaine">	<div class="box-part text-center">
           <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
           width="50" height="50"
           viewBox="0 0 192 192"
@@ -72,6 +72,6 @@
 				</div>
       </div>
 		</div>
-	</div>
+  </div>
 
 
