--- a/src/app/components/how-to-work/how-to-work.component.css
+++ b/src/app/components/how-to-work/how-to-work.component.css
@@ -1,18 +1,3 @@
-.fas {
-    color: #ff9800;
-    font-size: 8em;
-    margin-left: 35%;
-    margin-top: 20%;
-    margin-bottom: 20%
-    
-}
-.fa-chevron-right{
-    margin-left: 0px;
-    color: #f44336;
-    
-    
-}
-
 #howtowork {
     padding: 60px 0px;
 }
@@ -37,3 +22,33 @@ h1 span:last-child {
   span{
     font-size:15px;
   }
+
+  .image i {
+    padding: 55px;
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-size: 8em;
+    color: #ff9800;
+}
+
+.image i:before {
+    text-align: center;
+}
+
+.image {
+    background: #009688 !important;
+}
+
+.process {
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.process i {
+    vertical-align: middle;
+    display: table-cell;
+    font-size: 61px;
+    color: #ff9800;
+    line-height: 6;
+}
