--- a/src/app/components/how-to-work/how-to-work.component.html
+++ b/src/app/components/how-to-work/how-to-work.component.html
@@ -1,14 +1,13 @@
 
 <section id="howtowork">
-    <h1>
-        <span class="">COMMENT CA</span><span class="">MARCHES ?</span>
+    <h1 class="text-center">
+        <span class="">COMMENT RECRUTER</span><span class=""> UN BAKELISTE ?</span>
     </h1>
   <div class="container">
     <div class="row justify-content-md-center">
       <div class="col-md-3">
         <div class="ui card">
           <div class="image ">
-             <!--<img src="/images/avatar2/large/kristy.png">-->
              <i class="fas fa-file-signature "></i>
           </div>
           <div class="content">
@@ -19,34 +18,32 @@
           </div>
         </div>
       </div>
-      <div class="col">
-        <i class="fas fa-chevron-right"></i>
+      <div class="process">
+        <i class="fas fa-angle-double-right"></i>
       </div>
       <div class="col-md-3">
         <div class="ui card">
           <div class="image">
-            <!--<img src="/images/avatar2/large/kristy.png">-->
             <i class="fas fa-check-double"></i>
           </div>
           <div class="content">
-            <a class="header">Sélectionnez les profils</a>
+            <a class="header">Likez un bakeliste</a>
             <div class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
             </div>
           </div>
         </div>
       </div>
-      <div class="col">
-        <i class="fas fa-chevron-right"></i>
+      <div class="process">
+          <i class="fas fa-angle-double-right"></i>
       </div>
       <div class="col-md-3">
         <div class="ui card">
           <div class="image">
-             <!--<img src="/images/avatar2/large/kristy.png">-->
              <i class="fas fa-phone"></i>
           </div>
           <div class="content">
-            <a class="header">Nous vous Contactons</a>
+            <a class="header">On vous appelle</a>
             <div class="description">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </div>
