--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.css
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.css
@@ -45,3 +45,37 @@ a{
     float: right;
     color: #ff9800;
 }
+h1 {
+    margin-top: 0;
+    font-size: 3rem;
+    margin: auto;
+    margin-bottom: 20px;
+    text-align: center;
+  
+  }
+
+  .section{
+    padding:60px 0px;
+    margin-bottom:100px;
+  }
+  .container{
+    margin-bottom: 80px;
+  }
+  h1 div {
+    position: relative;
+    float: left;
+    text-align: center;
+  }
+  h1 span:last-child {
+    color: #ff9800;
+    margin-right: 1rem;
+    text-align: center;
+  }
+  h1 span:last-child {
+    margin-right: 1rem;
+    text-align: center;
+    font-weight: 700;
+    line-height: 1.28571429em;
+    font-weight: 700;
+    font-size: 38px;
+  }
