--- a/src/app/components/page-couverture-accueil/page-couverture-accueil.component.css
+++ b/src/app/components/page-couverture-accueil/page-couverture-accueil.component.css
@@ -15,13 +15,13 @@ section{
 .search-container {
 	text-align: center;
 	position: relative;
-    top: 193px;
+    margin-top: 104px;
 }
 .search-container i.search.icon {
     background: #ff9800;
     opacity: 1 !important;
 }
-.filtre {
+/* .filtre {
     height: 550px;
     background: #000;
     opacity: 0.1;
@@ -29,6 +29,47 @@ section{
     width: 100%;
     top: 0;
     z-index: 1;
+} */
+span.text-premier {
+    font-size: 23px;
+    text-align: center;
+    display: block;
+    line-height: 1.2;
+    color: #fff;
+    text-shadow: 0 1px 0 #000;
+    font-weight: 600;
+}
+
+h1.bienvenue span:last-child {
+    color: #ff9800;
+    font-size: 77px;
+    font-family: ubuntu;
+}
+h1.bienvenue span:first-child {
+    color: #000;
+}
+
+span.travail {
+    font-size: 52px;
+    font-weight: 600;
+    color: #ff9800;
+    text-shadow: 0 1px 0 #000;
+}
+
+span.text-deuxieme {
+    display: block;
+    text-align: center;
+    font-size: 23px;
+    line-height: 1.2;
+    font-weight: 600;
+    color: #fff;
+    text-shadow: 0 1px 0 #000;
+}
+span.recrutez {
+    color: #ff9800;
+    font-size: 33px;
+    font-weight: 900;
+    text-shadow: 0 1px 0 #000;
 }
 
 
