--- a/src/app/components/domaines/domaines.component.html
+++ b/src/app/components/domaines/domaines.component.html
@@ -3,7 +3,7 @@
 <div class="section">
     <div class="container">
         <h1>
-            <span class="">DOMAINES DES</span><span class="">BACKELISTES</span>
+            <span class="">DOMAINES DES</span><span class="">BAKELISTES</span>
         </h1>
      	<div class="row">
 
