bakeli cv ajoute

--- a/src/app/components/all-profil/all-profil.component.html
+++ b/src/app/components/all-profil/all-profil.component.html
@@ -15,7 +15,7 @@
         <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
       </div>
       <div class="col-2 align-self-center ">
-          <a routerLink="/profil-bakeliste" class="redirect-link">
+          <a routerLink="/detail-bakeliste" class="redirect-link">
             <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
           </a>
       </div>
@@ -32,7 +32,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -49,7 +49,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -66,7 +66,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -83,7 +83,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -100,7 +100,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -117,7 +117,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -134,7 +134,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -151,7 +151,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -168,7 +168,7 @@
           <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
         </div>
         <div class="col-2 align-self-center ">
-            <a routerLink="/profil-bakeliste" class="redirect-link">
+            <a routerLink="/detail-bakeliste" class="redirect-link">
               <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
             </a>
         </div>
@@ -178,4 +178,3 @@
   
 </section>
 <hr>
-<app-footer></app-footer>
