--- a/src/app/components/homepage/homepage.component.html
+++ b/src/app/components/homepage/homepage.component.html
@@ -1,9 +1,10 @@
 
 <app-page-couverture-accueil></app-page-couverture-accueil>
-<app-domaines></app-domaines>
+<!-- <app-domaines></app-domaines>
 <app-carroussel></app-carroussel>
 <app-how-to-work></app-how-to-work>
 <app-customers></app-customers>
-<app-contact-form></app-contact-form>
+<app-contact-form></app-contact-form> -->
+<app-all-profil></app-all-profil> 
 <app-footer></app-footer>
 
