nouvelle version simplifiée

--- a/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
+++ b/src/app/components/cv-model-bakeli/cv-model-bakeli.component.html
@@ -1,51 +1,87 @@
-<section>
+<section id="cvBakeli">
+  <hr>
+  <h1 class="text-center">
+    <span class="">Tous les</span><span class=""> bakelistes</span>
+  </h1>
+  <hr>
   <div class="container">
     <div class="row marge_row">
-    <div class="col-sm-8">
-      <h1>Nom et Prenom</h1>
-      <h3>formations</h3>
-      <h3>Disponibilite</h3>
-    </div>
-    <div class="col-sm-3">
-      <img src="/assets/images/download.png">
-    </div>
-  </div> 
-  <div class="row">
       <div class="col-sm-8">
-        <p class="projet">projets Realises</p>
-        <h2>Nom Projet</h2>
-        <h3>Technologie</h3>
-        <ul>
-        <li>Taches effectuees dans le projet </li>
-        </ul>
-        <h2>Nom Projet</h2>
-        <h3>Technologie</h3>
-        <ul>
-        <li>Taches effectuees dans le projet </li>
-        </ul>
-        <h2>Nom Projet</h2>
-        <h3>Technologie</h3>
-        <ul>
-        <li>Taches effectuees dans le projet </li>
-        </ul>
-        <p class="projet">Education</p>
-        <h2>Diplome -annee</h2>
-        <p>Location</p>
+        <h1>Bakeliste AigleNoir</h1>
+        <h3>Formation</h3>
+        <h3>Disponibilite</h3>
+      </div>
+      <div class="col-sm-3">
+        <img src="/assets/images/download.png">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-8">
+        <div class="projets-container">
+          <h2 class="projet">Projets Realisés</h2>
+          <div class="projet-item-container">
+            <h2>Nom Projet</h2>
+            <h3>Technologie</h3>
+            <ul>
+              <li>Taches effectuees dans le projet </li>
+            </ul>
+          </div>
+          <hr />
+          <div class="projet-item-container">
+            <h2>Nom Projet</h2>
+            <h3>Technologie</h3>
+            <ul>
+              <li>Taches effectuees dans le projet </li>
+            </ul>
+          </div>
+          <hr />
+          <div class="projet-item-container">
+            <h2>Nom Projet</h2>
+            <h3>Technologie</h3>
+            <ul>
+              <li>Taches effectuees dans le projet </li>
+            </ul>
+          </div>
+          <hr />
+        </div>
+        <div class="education-container">
+          <h2 class="projet">Education</h2>
+          <h3>Diplome - Année</h3>
+          <p>Université / Ecole</p>
+        </div>
+
+        <div id="portfolio-bakeliste">
+            <h2 class="projet portfolio-title">Portfolio</h2>
+            <div class="portfolio-items">
+              <div class="col-md-4 portfolio-item">
+                <img src="/assets/images/portfol1.png" alt="" class="img-responsive img-item">
+              </div>
+              <div class="col-md-4 portfolio-item">
+                <img src="/assets/images/portfol2.png" alt="" class="img-responsive img-item">
+              </div>
+              <div class="col-md-4 portfolio-item">
+                <img src="/assets/images/portfol3.jpg" alt="" class="img-responsive img-item">
+              </div>
+            </div>
+        </div>
+
       </div>
       <div class="col-sm-3">
         <p class="tec">Technologies </p>
-          <ul>
+        <ul>
           <li>Technologies utilises</li>
         </ul>
         <p class="tec">languages </p>
-            <ul>
-            <li>languages utilisees</li>
-          </ul>
-          <p class="tec">Motivations </p>
-              <ul>
-              <li>Why should we choose you?</li>
-            </ul>
+        <ul>
+          <li>languages utilisees</li>
+        </ul>
+        <p class="tec">Motivations </p>
+        <ul>
+          <li>Why should we choose you?</li>
+        </ul>
       </div>
-  </div>
+    </div>
+
+    
   </div>
 </section>
