--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -34,7 +34,7 @@ h2.footer-bloc-title {
 span.talents {
     display: inline-block;
     background: #fff;
-    color: #ff9800;
+    color: #009688;
     padding: 16px;
     /* border-radius: 5px; */
     font-size: 28px;
