--- a/src/app/components/all-profil/all-profil.component.css
+++ b/src/app/components/all-profil/all-profil.component.css
@@ -10,10 +10,10 @@
 img {
     width: 100px !important;
     height: 100px !important;
-    background-color: #ff9800 !important;
+    /* background-color: #ff9800 !important; */
 }
 h1 span:last-child {
-    color: #ff9800;
+    color: #009688;
     margin-right: 1rem;
     text-align: center;
     font-weight: 700;
