--- a/src/app/components/all-profil/all-profil.component.html
+++ b/src/app/components/all-profil/all-profil.component.html
@@ -4,177 +4,95 @@
         <span class="">Tous les</span><span class=""> bakelistes</span>
     </h1>
     <hr>
-  <div class="container ui segment">
+  <div class="container ui segment bakeliste-dev">
     <div class="row">
-      <div class="col-2 ">
+      <div class="col-md-2 img-container">
         <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
-      <div class="col-8">
-        <p class="font-weight-bold">Mariama Faye</p>
-        <p class="font-weight-normal">Développeur Python/ Django</p>
-        <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
+      <div class="col-md-8">
+        <p class="font-weight-bold pseudonyme">Bakeliste AigleNoir</p>
+        <p class="font-weight-normal titre-bakeliste">Développeur Python/ Django</p>
+        <p class="font-weight-lighter skills">
+          <a class="ui teal tag label">PHP</a> &nbsp;
+          <a class="ui teal tag label">Javascript</a> &nbsp;
+          <a class="ui teal tag label">Python</a> &nbsp;
+          <a class="ui teal tag label">Laravel</a> &nbsp;
+        </p>
       </div>
-      <div class="col-2 align-self-center ">
+      <div class="col-md-2 align-self-center show-bakeliste-btn-container">
           <a routerLink="/detail-bakeliste" class="redirect-link">
             <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
           </a>
       </div>
     </div>
   </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Binetou Rassoul Samb</p>
-          <p class="font-weight-normal">Marketeur</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+
+  <div class="container ui segment bakeliste-designer">
+    <div class="row">
+      <div class="col-md-2 img-container">
+        <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Khadija Diallo</p>
-          <p class="font-weight-normal">Business</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-8">
+        <p class="font-weight-bold pseudonyme">Bakeliste AigleVert</p>
+        <p class="font-weight-normal titre-bakeliste">Designer</p>
+        <p class="font-weight-lighter skills">
+          <a class="ui teal tag label">Photoshop</a> &nbsp;
+          <a class="ui teal tag label">Illustrator</a> &nbsp;
+          <a class="ui teal tag label">Inskape</a> &nbsp;
+          <a class="ui teal tag label">Bootstrap Studio</a> &nbsp;
+        </p>
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Paul Nzamba-Nzamba</p>
-          <p class="font-weight-normal">Développeur PHP</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-2 align-self-center show-bakeliste-btn-container">
+          <a routerLink="/detail-bakeliste" class="redirect-link">
+            <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+          </a>
       </div>
+    </div>
   </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Bara Diop</p>
-          <p class="font-weight-normal">Marketeur</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+
+  <div class="container ui segment bakeliste-business">
+    <div class="row">
+      <div class="col-md-2 img-container">
+        <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Ibrahima Kindy Bah</p>
-          <p class="font-weight-normal">Marketeur</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-8">
+        <p class="font-weight-bold pseudonyme">Bakeliste AigleRose</p>
+        <p class="font-weight-normal titre-bakeliste">Product Manager</p>
+        <p class="font-weight-lighter skills">
+          <a class="ui teal tag label">Gestion de project</a> &nbsp;
+          <a class="ui teal tag label">Customer Developement</a> &nbsp;
+          <a class="ui teal tag label">Scrum</a> &nbsp;
+        </p>
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Aïta Mbaye</p>
-          <p class="font-weight-normal">Développeur Angular</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-2 align-self-center show-bakeliste-btn-container">
+          <a routerLink="/detail-bakeliste" class="redirect-link">
+            <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+          </a>
       </div>
+    </div>
   </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Prince Diouf</p>
-          <p class="font-weight-normal">Développeur Python/ Django</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+
+  <div class="container ui segment bakeliste-marketeur">
+    <div class="row">
+      <div class="col-md-2 img-container">
+        <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-          <img class="ui medium image" src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Jesus Christ Diatta</p>
-          <p class="font-weight-normal">Développeur Python/ Django</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-8">
+        <p class="font-weight-bold pseudonyme">Bakeliste AigleBleu</p>
+        <p class="font-weight-normal titre-bakeliste">Digital Marketer</p>
+        <p class="font-weight-lighter skills">
+          <a class="ui teal tag label">SEO</a> &nbsp;
+          <a class="ui teal tag label">Wordpress</a> &nbsp;
+          <a class="ui teal tag label">Community Manager</a> &nbsp;
+          <a class="ui teal tag label">Content Manager</a> &nbsp;
+        </p>
       </div>
-  </div>
-  <div class="container ui segment">
-      <div class="row">
-        <div class="col-2 ">
-            <img class="ui medium image " src="https://image.flaticon.com/icons/svg/1602/1602958.svg">
-        </div>
-        <div class="col-8">
-          <p class="font-weight-bold">Assane Diatta</p>
-          <p class="font-weight-normal">Développeur Python/ Django</p>
-          <p class="font-weight-lighter">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore aut natus, illum sit dicta distinctio porro a hic? Sit, amet error quos eum veniam dignissimos. Atque temporibus neque iure sequi.</p>
-        </div>
-        <div class="col-2 align-self-center ">
-            <a routerLink="/detail-bakeliste" class="redirect-link">
-              <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
-            </a>
-        </div>
+      <div class="col-md-2 align-self-center show-bakeliste-btn-container">
+          <a routerLink="/detail-bakeliste" class="redirect-link">
+            <div class="d-flex justify-content-center"><i class="fas fa-eye"></i></div>
+          </a>
       </div>
+    </div>
   </div>
-  
-  
 </section>
 <hr>
