--- a/src/app/components/connexion/connexion.component.css
+++ b/src/app/components/connexion/connexion.component.css
@@ -1,7 +1,7 @@
 .form-content {
     align-content: center;
     padding: 3px;
-    border: 1px solid #ff9800;
+    border: 1px solid #009688;
     text-align: center;
     color: white;
     margin-top: 50px;
@@ -9,31 +9,31 @@
 
 .form-in {
     padding: 3px;
-    color: #ff9800;
+    color: #009688;
 }
 
 label {
-    color: #ff9800;
+    color: #009688;
 }
 
 .header {
     text-align: center;
     text-transform: uppercase;
-    color: #ff9800;
+    color: #009688;
     font-size: 40px;
 }
 
 .card-header {
     text-align: center;
-    background-color: #ff9800 !important;
+    background-color: #009688 !important;
 }
 
 .inputstyle {
-    border: 1px solid #ff9800 !important;
+    border: 1px solid #009688 !important;
 }
 
 .button {
-    background-color: #ff9800;
+    background-color: #009688;
     color: white;
     width: 120px;
     align-self: center;
@@ -55,7 +55,7 @@ h1 div {
 }
 
 h1 span:last-child {
-    color: #ff9800;
+    color: #009688;
     margin-right: 1rem;
     text-align: center;
 }
