--- a/src/app/components/cv-model-bakeli/cv-model-bakeli.component.css
+++ b/src/app/components/cv-model-bakeli/cv-model-bakeli.component.css
@@ -25,6 +25,9 @@ h1{
     text-transform: uppercase;
     color: #009688;
     font-weight: bold;
+    border: 1px solid #009688;
+    border-radius: 5px;
+    padding: 5px;
 }
 
 .tec
