--- a/src/app/components/inscription-recruteur/inscription-recruteur.component.css
+++ b/src/app/components/inscription-recruteur/inscription-recruteur.component.css
@@ -1,7 +1,7 @@
 .form-content{
     align-content: center;
     padding: 3px;
-    border: 1px solid #ff9800;
+    border: 1px solid #009688;
     text-align: center;
     color: white;
     margin-top: 50px;
@@ -9,41 +9,41 @@
 
 .form-in{
     padding: 3px;
-    color:#ff9800;
+    color:#009688;
 
 }
 
 label{
-    color:#ff9800;
+    color:#009688;
 }
 
 .header{
 text-align: center;
 text-transform: uppercase;
-color: #ff9800;
+color: #009688;
 font-size: 60px;
 }
 
 .card-header
 {
    text-align: center;
-    background-color: #ff9800 !important;
+    background-color: #009688 !important;
 }
 
 .inputstyle
 {
-    border: 1px solid #ff9800 !important;
+    border: 1px solid #009688 !important;
 }
 
 .button
 {
-    background-color: #ff9800;
+    background-color: #009688;
     color: white;
     width: 120px;
 }
 a{
     float: right;
-    color: #ff9800;
+    color: #009688;
 }
 h1 {
     margin-top: 0;
@@ -67,7 +67,7 @@ h1 {
     text-align: center;
   }
   h1 span:last-child {
-    color: #ff9800;
+    color: #009688;
     margin-right: 1rem;
     text-align: center;
   }
