--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,73 @@
-/* You can add global styles to this file, and also import other style files */
+.bakeliste-dev .img-container img {
+    width: 100% !important;
+    border: 4px solid #009688;
+    border-radius: 50%;
+    height: 125px !important;
+    padding: 5px;
+}
+.bakeliste-designer .img-container img {
+    width: 100% !important;
+    border: 4px solid #F34336;
+    border-radius: 50%;
+    height: 125px !important;
+    padding: 5px;
+}
+.bakeliste-business .img-container img {
+    width: 100% !important;
+    border: 4px solid #ff9800;
+    border-radius: 50%;
+    height: 125px !important;
+    padding: 5px;
+}
+.bakeliste-marketeur .img-container img {
+    width: 100% !important;
+    border: 4px solid #ff9800;
+    border-radius: 50%;
+    height: 125px !important;
+    padding: 5px;
+}
+.pseudonyme {
+    text-align: center;
+    font-size: 20px;
+}
+.titre-bakeliste {
+    text-align: center;
+}
+.skills {
+    text-align: center;
+}
+.bakeliste-dev {
+    position: relative;
+}
+.skills a {
+    display: inline-block;
+    margin-bottom: 5px;
+}
+.portfolio-item{
+    float: left;
+}
+.img-item{
+    width: 100%;
+}
+.portfolio-title{
+    margin-top: 15px
+}
+.education-container{
+    margin-bottom: 20px;
+}
+div#portfolio-bakeliste {
+    margin-bottom: 39px;
+}
+
+.portfolio-items {
+    margin-top: 15px;
+}
+
+.col-md-4.portfolio-item {
+    border: 1px solid #ececec;
+    height: 140px;
+    padding: 5px;
+}
+section#cvBakeli {
+    margin-bottom: 130px;
+}
